Main navigation alignment correction

--- a/src/bp-templates/bp-nouveau/readylaunch/css/main.css
+++ b/src/bp-templates/bp-nouveau/readylaunch/css/main.css
@@ -6567,6 +6567,40 @@ body.admin-bar .bb-rl-header {
   content: "\e10e";
 }
 
+body.activity .bb-readylaunch-menu {
+  margin-left: 170px;
+}
+
+body.activity .site:not(:has(.bb-rl-activity-wrap .bb-rl-secondary-container)) .bb-readylaunch-menu {
+  margin-left: 320px;
+}
+
+body.activity .bb-readylaunch-menu, body.bbp-user-page .bb-readylaunch-menu, body.forums.singular .bb-readylaunch-menu, body.messages.singular .bb-readylaunch-menu {
+  margin-left: 170px;
+}
+
+@media screen and (max-width: 1400px) {
+  body.activity .bb-readylaunch-menu, body.bbp-user-page .bb-readylaunch-menu, body.forums.singular .bb-readylaunch-menu, body.messages.singular .bb-readylaunch-menu {
+    margin-left: 0;
+  }
+}
+
+body.directory .bb-readylaunch-menu, body.forum-archive .bb-readylaunch-menu, body.forum.single .bb-readylaunch-menu, body.reply-edit .bb-readylaunch-menu, body.topic-edit .bb-readylaunch-menu, body.topic.single .bb-readylaunch-menu, body.group-admin.groups .bb-readylaunch-menu, body.my-account.profile .bb-readylaunch-menu, body.single-item.groups .bb-readylaunch-menu, body.bbp-user-page.single.my-account .bb-readylaunch-menu, body.notifications.single.my-account .bb-readylaunch-menu, body.my-account.profile.edit .bb-readylaunch-menu {
+  margin-left: 320px;
+}
+
+@media screen and (max-width: 1400px) {
+  body.directory .bb-readylaunch-menu, body.forum-archive .bb-readylaunch-menu, body.forum.single .bb-readylaunch-menu, body.reply-edit .bb-readylaunch-menu, body.topic-edit .bb-readylaunch-menu, body.topic.single .bb-readylaunch-menu, body.group-admin.groups .bb-readylaunch-menu, body.my-account.profile .bb-readylaunch-menu, body.single-item.groups .bb-readylaunch-menu, body.bbp-user-page.single.my-account .bb-readylaunch-menu, body.notifications.single.my-account .bb-readylaunch-menu, body.my-account.profile.edit .bb-readylaunch-menu {
+    margin-left: 170px;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  body.directory .bb-readylaunch-menu, body.forum-archive .bb-readylaunch-menu, body.forum.single .bb-readylaunch-menu, body.reply-edit .bb-readylaunch-menu, body.topic-edit .bb-readylaunch-menu, body.topic.single .bb-readylaunch-menu, body.group-admin.groups .bb-readylaunch-menu, body.my-account.profile .bb-readylaunch-menu, body.single-item.groups .bb-readylaunch-menu, body.bbp-user-page.single.my-account .bb-readylaunch-menu, body.notifications.single.my-account .bb-readylaunch-menu, body.my-account.profile.edit .bb-readylaunch-menu {
+    margin-left: 0;
+  }
+}
+
 @media screen and (max-width: 992px) {
   .bb-rl-header-container {
     justify-content: flex-start;
